# SliderQuant

./: .gitignore  README.md  auto_test_one.sh  auto_train_ddp.sh  datautils.py  download_hf.sh  download_lmeval.sh  export_model.sh  main.py  parallel_utils.py  pyproject.toml  task_list.conf  train_utils.py  utils.py
configs/llama2-7b-w2a16/: config.yaml
configs/llama2-7b-w4a4/: config.yaml
models/: LMClass.py  hadamard_utils.py  int_llama_layer.py  models_utils.py  rotation_utils.py  transformation.py
quantize/: int_linear.py  int_linear_lora.py  int_matmul.py  quantizer.py  slider_norm.py  sliderquant.py  utils.py
