[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sliderquant"
version = "0.1.0"
description = "SliderQuant: Accurate Post-Training Quantization for LLMs, supporting weight-only and weight-activation quantization."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate>=1.0.0",
    "datasets==2.18.0",
    "einops>=0.8.0",
    "fastapi>=0.115.0",
    "huggingface_hub==0.32.4",
    "jsonlines>=4.0.0",
    "lm-eval==0.4.7",
    "numexpr>=2.10.0",
    "numpy>=1.26.0",
    "omegaconf>=2.2.3",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "protobuf>=4.25.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.4.0",
    "requests>=2.32.0",
    "sentencepiece>=0.2.0",
    "termcolor>=2.4.0",
    "tqdm>=4.66.0",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "transformers==4.51.0",
    "safetensors>=0.4.0",
    "uvicorn>=0.30.0"
]

[tool.setuptools.packages.find]
exclude = ["results*", "scripts*", "examples*"]

[tool.wheel]
exclude = ["results*", "scripts*", "examples*"]
